--- a/vbl-website/src/components/MainPage/index.css
+++ b/vbl-website/src/components/MainPage/index.css
@@ -62,6 +62,7 @@
     width: 1200px;
     word-wrap: break-word;
   }
+  
 
 .carousel {
     background-color: rgb(233, 228, 228);
@@ -75,8 +76,8 @@
     position: absolute;
     background-color: rgb(233, 228, 228);
     color: black;
-    top: -40px;
-    left: 100px;
+    top: -25px;
+    left: 60px;
 }
 
   .box img {
@@ -106,7 +107,20 @@
     position: relative;
     margin-top: -50px;
     margin-left: -10px;
+    background-color: lightgray;
 }
+
+ .border {
+    background-color: lightgray;
+    Width: 1280px;
+    Height: 500px;
+ }
+
+ .MainPage {
+    background-color: lightgray;
+ }
+
+
 
 
 
