--- a/vbl-website/src/components/MainPage/index.css
+++ b/vbl-website/src/components/MainPage/index.css
@@ -1,4 +1,4 @@
-.Navbar {
+/* .Navbar {
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -49,7 +49,7 @@
 .login-button:hover {
     background-color: darkgrey;
     box-shadow: 0 6px 12px 0 rgba(0,0,0,0.24);
-  }
+  } */
 
   section  {
     font-family:Helvetica;
