--- a/vbl-website/src/components/Navbar/SearchBar.css
+++ b/vbl-website/src/components/Navbar/SearchBar.css
@@ -2,10 +2,12 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 25px 0px;
+    padding: 40px 0px;
     background-color: rgb(232, 230, 230);
     display: flex;
     flex-direction: row;
+    margin-top: 50px;
+
 }
 
 .search-select {
@@ -24,6 +26,26 @@
     border-radius: 10px;
     font-size: medium;
     padding: 15px;
-    width: 600px;
+    width: 700px;
     height: 30px;
+}
+
+@media (max-width: 1050px) {
+    .search-bar {
+        flex-direction: column;
+    }
+
+    .search-select {
+        width: 80%;
+        margin-right: 0px;
+    }
+
+    .search-input {
+        margin-top: 20px;
+        width: 80%;
+    }
+
+    .search-input-box {
+        width: 100%;
+    }
 }
