--- a/vbl-website/src/components/Navbar/index.css
+++ b/vbl-website/src/components/Navbar/index.css
@@ -2,68 +2,13 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 20px 150px 10px 150px;
+    padding: 70px 100px 50px 100px;
     background-color: lightgray;
 }
 
-.navbar-first-line {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    /* padding-bottom: 40px; */
+@media (max-width: 600px) {
+    .Navbar {
+        padding: 80px 50px 50px 50px;
+    }
 }
-
-.logo-name {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.logo {
-    height: 60px;
-    width: 60px;
-    margin-right: 10px;
-}
-
-.follow-icons-login {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.icon {
-    height: 30px;
-    width: 30px;
-    margin-right: 10px;
-}
-
-.login-button {
-    margin-left: 10px;
-    width: 80px;
-    height: 30px;
-    font-size: 18px;
-    background-color: lightgray;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.24);
-    cursor: pointer;
-}
-
-.login-button:hover {
-    background-color: darkgrey;
-    box-shadow: 0 6px 12px 0 rgba(0,0,0,0.24);
-}
-
-.navbar-select-bar {
-    margin: 50px 0px;
-}
-/* .menus {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.dropdown {
-    display: none;
-} */
 
