--- a/vbl-website/src/components/BlackBusinessDirectory/index.css
+++ b/vbl-website/src/components/BlackBusinessDirectory/index.css
@@ -14,7 +14,7 @@
     text-decoration: solid;
 }
 
-.img-1 {
+.img-01 {
     max-width: 100%;
     height: auto;
     width: 180px;
@@ -23,37 +23,31 @@
     margin: 40px;
 }
 
-.event-list-1 {
+.event-list-01 {
     margin: 10px -20px;
     width: 100%;
 }
 
-.img-2 {
-     clear: left;
+.event-list-02 {
+   clear: both;
 }
 
-.event-list-2 {
-    clear: both;
-}
-
-.img-2 {
-    max-width: 50%;
+.img-02 {
+    max-width: 100%;
     height: auto;
     width: 180px;
     top: 10px;
-    margin: 10px -20px;
     float: left;
+    margin: 40px;
 }
 
-.event-list-2 {
+.event-list-02 {
     margin: 10px -20px;
     width: 100%;
 }
 
 .footer {
     clear: both;
-}
-.footer {
-    width: 80%;
+    width: 90%;
 }
 
