job posting board implemented

--- a/vbl-website/src/components/JobOpportunities/index.css
+++ b/vbl-website/src/components/JobOpportunities/index.css
@@ -2,12 +2,11 @@
 .Job-Opportunities {
   justify-content: center;
   align-items: center;
-  padding: 0px 100px 50px 100px;
+  padding: 0px 100px 200px 100px;
   background-color: lightgrey;
   display:flex-block;
   width: 100vw;
-  height: 100vh;
-  margin: 0px;
+  position: absolute;
 }
 
 .sub-section-name {
@@ -18,14 +17,26 @@
   text-decoration: solid;
 }
 
-.job-postings-box {
+.Postings-Header {
+  display:flex;
+  justify-content:space-between;
+  padding-left: 5px;
+  padding-right: 10px;
+  margin-bottom: 10px;
 }
 
-.images {
-  max-width: 100%;
-  height: auto;
-  width: 180px;
-  top: 10px;
-  float: left;
-  margin: 40px;
+.num-postings {
+  padding-top: 20px;
+}
+
+.Job-Board {
+  border-radius: 15px;
+  background-color: rgb(232, 230, 230);
+  display:flex-block;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 100%;
+  height: relative;
 }
