--- a/vbl-website/src/components/JobOpportunities/index.css
+++ b/vbl-website/src/components/JobOpportunities/index.css
@@ -24,10 +24,11 @@
   justify-content:space-between;
   padding-left: 5px;
   padding-right: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .num-postings {
+  font-size: 18px;
   padding-top: 20px;
 }
 
