--- a/vbl-website/src/components/JobOpportunities/job.css
+++ b/vbl-website/src/components/JobOpportunities/job.css
@@ -60,7 +60,7 @@
 
 .part2 span {
   margin-right: 1rem;
-  color: darkgray;
+  color: #989898;
   background-color: rgb(232, 230, 230);
   font-weight: 700;
   padding: 0.5rem;
