modal for each job posting implemented

--- a/vbl-website/src/components/JobOpportunities/index.css
+++ b/vbl-website/src/components/JobOpportunities/index.css
@@ -8,7 +8,7 @@
   background-color: lightgrey;
   display:flex-block;
   width: 100vw;
-  position: absolute;
+  position: relative;
 }
 
 .sub-section-name {
