--- a/vbl-website/src/components/JobOpportunities/job.css
+++ b/vbl-website/src/components/JobOpportunities/job.css
@@ -10,6 +10,10 @@
   box-shadow: 0px 6px 8px 6px rgba(112, 113, 113, 0.2);
 }
 
+.job-container:hover {
+  cursor: pointer;
+}
+
 .part1 {
   display: flex;
   flex-direction: column;
@@ -42,6 +46,7 @@
   font-size: 1.6rem;
   display: inline-block;
   padding: 0.7rem 0;
+  margin-top: 5px;
 }
 
 .details {
@@ -65,5 +70,10 @@
   font-weight: 700;
   padding: 0.5rem;
   border-radius: 5px;
+}
+
+.modalElementContainer {
+  position: absolute;
+  top: 0%
 }
 
