CAROUSEL/SLIDER FIXED AND  COMPLETED

--- a/vbl-website/src/components/MainPage/index.css
+++ b/vbl-website/src/components/MainPage/index.css
@@ -1,109 +1,72 @@
-
-  section  {
-    font-family:Helvetica;
-    color:black;
-    background-color: lightgray;
-    left:55%;
-    margin-left: -48%;
-    position: relative;
-    top: 315px;
-    width: 1200px;
-    word-wrap: break-word;
-  }
-
-.carousel {
-    background-color: rgb(233, 228, 228);
-    position:relative;
-    left: 109px;
-    width:1200px;
-    z-index: 3;
-}
-.Carousel-Border {
-    background-color: rgb(233, 228, 228);
-    position: absolute;
-    top: 450px;
-    left: 71px;
-    width: 1270px;
-    height: 300px;
-    z-index: 1;
-}
-.carousel h2 {
-    position: absolute;
-    color: black;
-    top: -40px;
-    left: 10px;
-    z-index: 2;
-}
-
-  .box img {
-    background-color: darkgrey;
-    max-inline-size: 100%;
-    block-size: auto;
-    aspect-ratio: 2/1;
-    object-fit: contain;
-  }
-
-.slick-slide div {
-    margin: 0 1rem;
-    background-color: rgb(233, 228, 228);
-
-}
-
-.slick-dots {
-    background-color: rgb(233, 228, 228);
-}
-
-.slick-active {
-    background-color: rgb(233, 228, 228);
-}
-
-.slick-slider {
-    height: 10rem;
-    position: relative;
-    margin-top: -50px;
-    margin-left: -10px;
-    background-color: rgb(233, 228, 228)
-
-}
-
- .Main-Border {
-    background-color: lightgray;
-    Width: 1200px;
-    Height: 500px;
+.card {
+   height: 200px;
+   background-color: rgba(0, 0, 0, 0.4);
+   color: white;
+   font-size: 40px;
+   margin: 10px;
+   flex: 200px 0 0;
+ }
+ .cards img {
+     width: 100%;
+     object-fit: cover;
+ }
+ .cards-wrapper {
+   display: flex; 
+   transition: ease 0.5s;
  }
 
- .MainPage {
-    background-color: lightgray;
+ /*  adds responsiveness for moblie devices but when added, slider does not function
+ @media (mmax-width: 1068px) {
+   .card {
+     display: none !important;
+   }
+}
+*/ 
+
+ .display-area {
+   width: 880px;
+ /*   border: 1px solid black; */
+   overflow-x: hidden;
+   margin: auto;
+ }
+ 
+ .dots-wrapper {
+   display: flex;
+   justify-content: center;
+   margin: auto;
+ }
+ 
+ .dot {
+   border: none;
+   background: rgba(0, 0, 0, 0.2);
+   width: 20px;
+   height: 20px;
+   margin: 5px;
+   border-radius: 50%;
+   outline: none;
+ }
+ .dot:hover {
+   background: rgba(0, 0, 0, 0.3);
+ }
+ .dot.active {
+   background: rgba(0, 0, 0, 0.5);
  }
 
- @media screen and (max-width: 600px) {
-    .carousel {
-        background-color: rgb(233, 228, 228);
-        position: relative;
-        left: 70px;
-        width: 20%;
-    }
+ .MainPage { 
+   background-color: lightgray;
+ }
 
-    .carousel h2 {
-        font-size: 12px
-    }
+ .h2 {
+   font-size: 3.0vh;
+ }
+ .p {
+   font-size: 2vmin;
+ }
 
-    section {
-        width: 500px;
-    }
-   
-}
-
-
-
-
-
-
-
-
-
-
-
+ .welcome-mainpage {
+   padding: 25px 50px 75px 100px;
+ }
+ 
 
 
 
