--- a/vbl-website/src/components/Navbar/SearchBar.css
+++ b/vbl-website/src/components/Navbar/SearchBar.css
@@ -1,4 +1,5 @@
-.search-bar {
+
+/* .search-bar {
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -48,4 +49,4 @@
     .search-input-box {
         width: 100%;
     }
-}
+} */
